# fastspar

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.in  NOTES  README.md  autogen.sh  bootstrap.cpp  configure  configure.ac  exact_pvalue.cpp  fake_data.txt  fractions.tsv  sparcc_internals.py  sparcpp.cpp
m4/: ax_blas.m4
scripts/: fastspar.rb
src/: Makefile  Makefile.am  Makefile.in  bootstrap.cpp  bootstrap.h  bootstrap_opts.cpp  bootstrap_opts.h  common.cpp  common.h  config.h  exact_pvalue.cpp  exact_pvalue.h  exact_pvalue_opts.cpp  exact_pvalue_opts.h  fastspar.cpp  fastspar.h  fastspar_opts.cpp  fastspar_opts.h  gaussq.f  pvalue.cpp  pvalue.h  pvalue_opts.cpp  pvalue_opts.h  reduce.cpp  reduce.h  reduce_opts.cpp  reduce_opts.h  sparcpp.cpp  sparcpp.h  version.h
tests/: Makefile.am  run_tests.cpp  test_fastspar.cpp  test_main.cpp  test_pvalues.cpp
tests/data/: fake_data_cor.tsv  fake_data_cor_bs_1.tsv  fake_data_cor_bs_2.tsv  fake_data_cor_bs_3.tsv  fake_data_cov.tsv  fake_data_exact_pvalues.tsv  fake_data_pseudo_pvalues.tsv
